--- a/index.html
+++ b/index.html
@@ -1,4 +1,25 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+</head>
+<body>
+    <h1>Web designer 64's Portfolio</h1>
+    <h2>I'm a Web Developer</h2>
+<hr/>
+    <h3>
+        <a href="../2.4 Movie Ranking Project/solution.html">Movie Ranking Project</a>
+        <img src="./assets/images/movie-ranking.png">
+    </h3>
+    <h3>
+        <a href="../3.4 Birthday Invite Project/solution.html">Birthday Invite Project</a>
+        <img src="./assets/images/birthday-invite.png">
+    </h3>
+ <a href ="./public/about.html">About Me</a> <a href="./public/contact.html">Contact Me</a>
+</body>
+</html>
 
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
